# Datapillar

./: .claudeignore  .codexignore  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  README.md  README.zh-CN.md  hashmap.json  index.html  pom.xml
datapillar-ai/: .claudeignore  .codexignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  demo.yaml  logging.yaml  neo4j数仓知识库设计.md  pyproject.toml  pyrightconfig.full.json  restart-ai.sh
datapillar-ai/config/: settings.toml
datapillar-ai/docs/: ai_backlog.md  ai_llm_usage.sql  ai_model_api_spec.md  etl_context_todo.md  etl_sse_protocol_v2.md  etl_sse_protocol_v3.md  etl多智能体_review_todo.md  knowledge_wiki.sql  knowledge_wiki_design.md
datapillar-ai/examples/: ragsearch.py
datapillar-ai/scripts/: batch_create_test_data.py  clear_neo4j.py  generate_embeddings.py  init_kg_data.py  init_kg_schema.py
datapillar-ai/src/: __init__.py  app.py
datapillar-ai/src/agent/: __init__.py  coder_agent.py  context_manager.py  orchestrator.py  planner_agent.py  router.py  schemas.py  sql_validator.py  state.py  utils.py
datapillar-ai/src/agent/assembler/: __init__.py  assembler.py  base.py
datapillar-ai/src/agent/etl_agents/: ARCHITECTURE.md  __init__.py  orchestrator.py
datapillar-ai/src/agent/tools/: __init__.py  agent_tools.py  schemas.py
datapillar-ai/src/api/: __init__.py  health.py  router.py
datapillar-ai/src/assembler/: __init__.py  registry.py
datapillar-ai/src/assembler/components/: hive.py
datapillar-ai/src/auth/: __init__.py  dependencies.py  jwt_util.py  middleware.py
datapillar-ai/src/bootstrap/: __init__.py  lifespan.py
datapillar-ai/src/config/: __init__.py  connection.py  models.py
datapillar-ai/src/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  security.py
datapillar-ai/src/infrastructure/: __init__.py
datapillar-ai/src/infrastructure/crypto/: key_crypto.py
datapillar-ai/src/infrastructure/database/: __init__.py  cypher.py  gravitino.py  mysql.py  neo4j.py  redis.py
datapillar-ai/src/infrastructure/keystore/: __init__.py  base.py  crypto_service.py  local.py  object_store.py
datapillar-ai/src/infrastructure/llm/: __init__.py  client.py  config.py  embeddings.py  glm.py  llm_cache.py  model_manager.py  semantic_cache.py  structured_output.py  token_counter.py  usage_tracker.py
datapillar-ai/src/infrastructure/repository/: __init__.py  component_repository.py  knowledge_repository.py  model_repository.py  neo4j_kg.py  neo4j_uow.py  semantic_repository.py
datapillar-ai/src/infrastructure/resilience/: __init__.py  retry.py  (+2 more)
datapillar-ai/src/integrations/: __init__.py  embeddings.py  llm.py
datapillar-ai/src/knowledge_graph/: __init__.py  router.py  service.py
datapillar-ai/src/modules/: __init__.py
datapillar-ai/src/repositories/: __init__.py  component_repository.py  knowledge_repository.py  model_repository.py
datapillar-ai/src/shared/: __init__.py
datapillar-ai/src/tools/: __init__.py  agent_tools.py
datapillar-ai/tests/: test_a2a.py  test_analyst_agent.py  test_api_key_crypto.py  test_api_response.py  test_api_scope_and_docs.py  test_auth_crypto_rpc_client.py  test_auth_crypto_rpc_transport.py  test_auth_dependencies.py  test_context_compress.py  test_datapillar.py  test_etl_agent_blackboard_requests.py  test_etl_agents.py  test_etl_analyst_agent.py  test_etl_architect_agent_context.py  test_etl_boss.py  test_etl_chat_messages.py  test_etl_delegation_architecture.py  test_etl_developer_agent_context.py  test_etl_get_column_value_domain.py  test_etl_knowledge_agent.py  test_etl_orchestrator_preemption_and_recovery.py  test_etl_orchestrator_pull_first.py  test_etl_recommend_guidance_tool.py  test_etl_resolve_doc_pointer_tool.py  test_etl_search_assets.py  test_etl_sse_filters.py  test_etl_team.py  test_etl_team_e2e.py  test_etl_tester_agent_context.py  test_etl_tester_agent_delegation.py  test_etl_tools_column_real.py  test_etl_tools_component_real.py  test_etl_tools_node_real.py  test_etl_tools_table_real.py  test_events.py  test_exception_handler.py  test_exception_mapper.py  test_experience_flow.py  test_gateway_assertion_auth.py  test_glm_main.py  (+22 more)
datapillar-airflow-plugin/: __init__.py  api_v2.py  api_v3.py  config.py  dag_generator.py  pyproject.toml
datapillar-airflow-plugin/executor/: __init__.py  shell.py
datapillar-airflow-plugin/templates/: dag_template_v2.py.j2  dag_template_v3.py.j2
datapillar-airflow-plugin/tests/: test_dag_generator.py
datapillar-oneagentic/: pyproject.toml
datapillar-oneagentic/docs/: logging.md  rag-plan.md
datapillar-oneagentic/examples/: config.example.toml  knowledge_evalset.json  quickstart.py  quickstart_dynamic.py  quickstart_hierarchical.py  quickstart_knowledge.py  quickstart_knowledge_evaluation.py  quickstart_knowledge_team_agent.py  quickstart_llm.py  quickstart_mapreduce.py  quickstart_react.py  security_confirmation.py  test_learning_mode.py  test_react_mode.py
datapillar-oneagentic/src/datapillar_oneagentic/: __init__.py  config.py
datapillar-oneagentic/tests/: stub_llm.py  test_a2a_tool.py  test_agent.py  test_backpressure.py  test_circuit_breaker.py  test_compact.py  test_compact_e2e.py  test_compactor.py  test_config.py  test_context.py  test_context_builder_interrupts.py  test_delegation_tool.py  test_e2e.py  test_e2e_glm.py  test_e2e_stub.py  test_event_bus.py  test_events.py  test_executor_helpers.py  test_experience.py  test_framework_features.py  test_framework_stress.py  test_hierarchical.py  test_interrupt_resume.py  test_knowledge_auto_filter.py  test_knowledge_chunk_edit.py  test_knowledge_chunker.py  test_knowledge_config.py  test_knowledge_context_window.py  test_knowledge_evaluation.py  test_knowledge_integration.py  test_knowledge_namespace_isolation.py  test_knowledge_parser.py  test_knowledge_query_router.py  test_knowledge_registry.py  test_knowledge_retriever_variants.py  test_llm_cache_concurrency.py  test_llm_error_classifier.py  test_llm_factory_provider_params.py  test_llm_thinking.py  test_map_reduce.py  (+23 more)
(+4489 files in other folders)
