[project]
name = "datapillar-ai"
version = "1.0.0"
description = "Data warehouse workflowAgent - GraphRAG + Neo4jknowledge base"
requires-python = ">=3.11,<3.13"
dependencies = [# FastAPIframe
 "fastapi>=0.109.0","scalar-fastapi>=1.4.0","python-multipart>=0.0.9","uvicorn[standard]>=0.27.0","pydantic>=2.6.0",# Neo4jgraph database
 "neo4j>=5.17.0",# Neo4jofficialGraphRAGLibrary
 "neo4j-graphrag>=1.11.0",# MySQLdatabase(readAIModel configuration)
 "pymysql>=1.1.0",# Redis(Checkpoint & Memory)
 "redis>=5.2.1","datapillar-oneagentic[glm,openai,redis,sse,milvus,knowledge]>=0.1.0","boto3>=1.34.0",# binary serialization
 "msgpack>=1.0.8",# Tool library
 "dynaconf>=3.2.0","httpx>=0.28.1,<0.29.0","pyyaml>=6.0.1",# SQL parse(bloodline analysis)
 "sqlglot>=26.0.0",# JWTCertification
 "pyjwt[crypto]>=2.8.0","sqlalchemy>=2.0.0",# JSON Repair(Process LLM Output malformation JSON)
 "json-repair>=0.30.0",# High performance hashing(Content deduplication)
 "xxhash>=3.4.0","nacos-sdk-python>=3.0.3,<3.0.4",]

[project.optional-dependencies]
dev = ["pytest>=7.4.4","pytest-asyncio>=0.23.4","ruff>=0.7.0","black>=24.0.0","pyright>=1.1.0","pre-commit>=4.5.1",]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Agent Module auto-discovery(To add a new module,just add a line here)
[project.entry-points."oneagentic.agents"]
etl = "src.modules.etl.agents"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py311"
exclude = [".git",".venv","__pycache__","build","dist",]

[tool.ruff.lint]
# Keep the core lint set with low noise and high signal.
select = ["F","E7","E9","B","UP","I","SIM","C4","S","N801","N802","N803","N804","N805"]
# Ignore known false positives in this codebase.
ignore = ["S311","S608"]

[tool.ruff.lint.per-file-ignores]
# __init__.py commonly exports symbols intentionally.
"**/__init__.py" = ["F401"]
# Security checks are for runtime paths; tests/scripts are noisy.
"tests/**" = ["S"]
"datapillar-ai/tests/**" = ["S"]
"**/scripts/**" = ["S"]
"datapillar-ai/scripts/**" = ["S"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.mccabe]
# Keep this for optional local analysis; complexity rules are not selected in lint.
max-complexity = 18

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 20
max-returns = 10
max-statements = 90

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = true

# Need to be removed before going online
[tool.uv.sources]
datapillar-oneagentic = { path = "../datapillar-oneagentic",editable = true }
