[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datapillar-airflow-plugin"
version = "1.0.0"
description = "Datapillar Airflow Plugin - REST API for DAG Management"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Datapillar Team", email = "dev@datapillar.io"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Framework :: Apache Airflow",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["airflow", "plugin", "dag", "workflow", "datapillar"]

dependencies = [
    "apache-airflow>=2.7.0",
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/datapillar/datapillar"
Documentation = "https://docs.datapillar.io"
Repository = "https://github.com/datapillar/datapillar"

[project.entry-points."airflow.plugins"]
datapillar = "datapillar_airflow_plugin:DatapillarPlugin"

[tool.setuptools]
packages = ["datapillar_airflow_plugin"]

[tool.setuptools.package-dir]
datapillar_airflow_plugin = "."

[tool.setuptools.package-data]
datapillar_airflow_plugin = ["templates/*.j2"]
