[project]
name = "datapillar-oneagentic"
version = "0.1.0"
description = "声明式多智能体协作框架 - Declarative Multi-Agent Collaboration Framework"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Datapillar Team", email = "team@datapillar.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
keywords = ["agents", "llm", "multi-agent", "ai", "langchain", "langgraph", "crew", "agentic"]

dependencies = [
    # LangGraph 核心（Agent 编排）
    "langgraph>=1.0.3",
    "langgraph-checkpoint>=2.0.4",
    # LangChain 核心（消息、工具接口）
    "langchain-core>=1.0.5",
    # 数据校验
    "pydantic>=2.6.0",
    # Token 计数（默认实现）
    "tiktoken>=0.7.0",
    # HTTP 客户端（A2A 协议）
    "httpx>=0.26.0",
    # JSON 修复（处理 LLM 畸形输出）
    "json-repair>=0.30.0",
    "pydantic-settings>=2.12.0",
]

[project.optional-dependencies]
# LLM 提供者
openai = ["langchain-openai>=0.2.0", "openai>=1.0.0"]
anthropic = ["langchain-anthropic>=0.2.0", "anthropic>=0.39.0"]
glm = ["langchain-community>=0.4.1", "zhipuai>=2.1.5.20250825"]

# 存储提供者
redis = ["langgraph-checkpoint-redis>=0.2.1", "redis>=5.2.1"]
postgres = ["langgraph-checkpoint-postgres>=0.2.0", "psycopg[binary]>=3.0.0"]
sqlite = ["langgraph-checkpoint-sqlite>=0.2.0"]

# 向量数据库（经验学习）
lance = ["lancedb>=0.20.0", "pyarrow>=18.0.0"]
chroma = ["chromadb>=1.0.0"]
milvus = ["pymilvus>=2.5.0"]
vectordb = ["datapillar-oneagentic[lance,chroma,milvus]"]

# MCP 协议支持
mcp = ["mcp>=0.1.0"]

# A2A 协议支持（Google Agent2Agent）
a2a = ["a2a-sdk>=0.2.0"]

# 遥测（可观测性）
telemetry = [
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-exporter-otlp-proto-http>=1.39.1",
]

# SSE 支持（用于 Web 服务）
sse = ["sse-starlette>=1.6.5"]

# 全部依赖
all = [
    "datapillar-oneagentic[openai,anthropic,glm,redis,postgres,sqlite,lance,chroma,milvus,mcp,a2a,telemetry,sse]"
]

# 开发依赖
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.7.0",
    "black>=24.0.0",
    "pyright>=1.1.0",
    "pre-commit>=4.5.0",
    "langchain-community>=0.4.1",
    "zhipuai>=2.1.5.20250825",
]

[project.urls]
Homepage = "https://github.com/datapillar/oneagentic"
Documentation = "https://oneagentic.dev"
Repository = "https://github.com/datapillar/oneagentic"
Issues = "https://github.com/datapillar/oneagentic/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datapillar_oneagentic"]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E7",     # pycodestyle 语法
    "E9",     # pycodestyle 语法
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "I",      # isort
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "N801",   # 类名 CamelCase
    "N802",   # 函数名 snake_case
    "N803",   # 参数名 snake_case
    "C90",    # McCabe 复杂度
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"**/tests/**" = ["S"]

[tool.ruff.lint.isort]
known-first-party = ["datapillar_oneagentic"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "langchain-openai>=1.1.7",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
