[project]
name = "datapillar-oneagentic"
version = "0.1.0"
description = "Declarative multi-agent collaboration framework"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11,<3.13"
authors = [
    {name = "Datapillar Team", email = "team@datapillar.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
keywords = ["agents", "llm", "multi-agent", "ai", "langchain", "langgraph", "crew", "agentic"]

dependencies = [
    # LangGraph core (agent orchestration)
    "langgraph>=1.0.3",
    "langgraph-checkpoint>=2.0.4",
    # LangChain core (messages, tool interfaces)
    "langchain-core>=1.0.5",
    "langchain-text-splitters>=1.1.0",
    # Data validation
    "pydantic>=2.6.0",
    # HTTP client (A2A protocol)
    "httpx>=0.26.0",
    # JSON repair (handle malformed LLM output)
    "json-repair>=0.30.0",
    "pydantic-settings>=2.12.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
# LLM providers
openai = ["langchain-openai>=0.2.0", "openai>=1.0.0"]
anthropic = ["langchain-anthropic>=0.2.0", "anthropic>=0.39.0"]
glm = ["langchain-community>=0.4.1", "zhipuai>=2.1.5.20250825"]

# Knowledge RAG (parse/chunk/rerank)
knowledge = [
    "pypdfium2>=4.0.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "readability-lxml>=0.8.1",
    "markdown>=3.4.0",
    "sentence-transformers>=2.2.0",
]

# Storage providers
redis = ["langgraph-checkpoint-redis>=0.2.1", "redis>=5.2.1"]
postgres = ["langgraph-checkpoint-postgres>=0.2.0", "psycopg[binary]>=3.0.0"]
sqlite = ["langgraph-checkpoint-sqlite>=0.2.0"]

# Vector database (experience learning)
lance = ["lancedb>=0.20.0", "pyarrow>=18.0.0"]
chroma = ["chromadb>=1.0.0"]
milvus = ["pymilvus>=2.5.0"]
vectordb = ["datapillar-oneagentic[lance,chroma,milvus]"]

# MCP protocol support
mcp = ["mcp>=0.1.0"]

# A2A protocol support (Google Agent2Agent)
a2a = ["a2a-sdk>=0.2.0"]

# Telemetry (observability)
telemetry = [
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-exporter-otlp-proto-http>=1.39.1",
]

# SSE support (web service)
sse = ["sse-starlette>=1.6.5"]

# Full dependencies
all = [
    "datapillar-oneagentic[openai,anthropic,glm,knowledge,redis,postgres,sqlite,lance,chroma,milvus,mcp,a2a,telemetry,sse]"
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.7.0",
    "black>=24.0.0",
    "pyright>=1.1.0",
    "pre-commit>=4.5.0",
    "langchain-community>=0.4.1",
    "zhipuai>=2.1.5.20250825",
]

[project.urls]
Homepage = "https://github.com/SunnyX6/Datapillar"
Documentation = "https://github.com/SunnyX6/Datapillar"
Repository = "https://github.com/SunnyX6/Datapillar"
Issues = "https://github.com/SunnyX6/Datapillar/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datapillar_oneagentic"]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E7",     # pycodestyle syntax
    "E9",     # pycodestyle syntax
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "I",      # isort
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "N801",   # class name CamelCase
    "N802",   # function name snake_case
    "N803",   # argument name snake_case
    "C90",    # McCabe complexity
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"**/tests/**" = ["S"]
"**/core/nodes.py" = ["C901"]  # Parallel node function complexity slightly over limit (16 vs 15).

[tool.ruff.lint.isort]
known-first-party = ["datapillar_oneagentic"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "langchain-openai>=1.1.7",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
